@@ -10,6 +10,7 @@ bluealsa_aplay_SOURCES = \
 	../../src/shared/dbus-client.c \
 	../../src/shared/ffb.c \
 	../../src/shared/log.c \
+	../../src/shared/nv.c \
 	alsa-mixer.c \
 	alsa-pcm.c \
 	dbus.c \
